[package]
name = "te-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2.5"
te-player = { path = "../te-player", features = ["imgui-0-8"] }
te-renderer = { path = "../te-renderer" }
wgpu = "0.13.1"