[package]
name = "te-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
te-player = { path = "../te-player", features = ["imgui-0-8"] }
te-renderer = { path = "../te-renderer" }
wgpu = "0.17.0"
futures-intrusive = "0.5.0"
bytemuck = { version = "1.4", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
