[package]
name = "te-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = { workspace = true }
te-player = { workspace = true }
te-renderer = { workspace = true }
wgpu = { workspace = true }
futures-intrusive = { workspace = true }
bytemuck = { workspace = true }
cgmath = { workspace = true }
image = { workspace = true }
