[package]
name = "te-gamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
gilrs = { version = "0.10.2" }
imgui-gilrs ={ git = "https://github.com/Calcoph/imgui-gilrs", branch = "uptodate-winit", features = ["winit"], optional = true }

[features]
imgui = ["imgui-gilrs"]
