[package]
name = "te-gamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { workspace = true }
gilrs = { workspace = true }
imgui-gilrs = { workspace = true , optional = true }

[features]
imgui = ["imgui-gilrs"]
#default = ["imgui"]
