[package]
name = "te-mapmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29"
gilrs-core = "0.5.2"
imgui = "0.11.0"
imgui-winit-support = { version = "0.11.0", default-features = false }
env_logger = "0.10.0"
wgpu = "0.17.0"
cgmath = "0.18"
pollster = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
imgui-wgpu = "0.24.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.te-renderer]
path = "../te-renderer"

[dependencies.te-gamepad]
path = "../te-gamepad"
features = ["imgui"]
