[package]
name = "te-mapmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { workspace = true }
gilrs-core = { workspace = true }
imgui = { workspace = true }
imgui-winit-support = { workspace = true }
env_logger = { workspace = true }
wgpu = { workspace = true }
cgmath = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
imgui-wgpu = { workspace = true }
image = { workspace = true }

te-renderer = { workspace = true }
te-gamepad = { workspace = true, features = ["imgui"]}
