[package]
name = "te-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# window creator
winit = "0.27.2"
gilrs-core = "0.5.2"

# renderer
env_logger = "0.10"
log = "0.4"
wgpu = "0.16.2"
pollster = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"

# imgui-0-8
imgui = { version = "0.11.0", optional = true }
imgui-wgpu = { version = "0.23.0", optional = true }
imgui-winit-support = { version = "0.11.0", default-features = false, optional = true}

json = "0.12.4"

[dependencies.gltf]
version = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.te-renderer]
path = "../te-renderer"

[dependencies.te-gamepad]
path = "../te-gamepad"

[features]
imgui-0-8 = ["imgui-winit-support", "imgui", "imgui-wgpu"]
draw_when_told = []
