[package]
name = "te-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# window creator
winit = { workspace = true }
gilrs = { workspace = true }

# renderer
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
cgmath = { workspace = true }

# imgui
imgui = { workspace = true, optional = true }
imgui-wgpu = { workspace = true, optional = true }
imgui-winit-support = { workspace = true, default-features = false, optional = true}
imgui-gilrs = { workspace = true, optional = true}

json = { workspace = true }
gltf = { workspace = true }
image = { workspace = true }

te-renderer = { workspace = true }
te-gamepad = { workspace = true }

[features]
imgui = ["imgui-winit-support", "dep:imgui", "imgui-wgpu", "te-gamepad/imgui", "imgui-gilrs"]
draw_when_told = []
default = ["imgui"]
