[package]
name = "te-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
cgmath = "0.18"
wgpu = "0.15"
winit = "0.27.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
sorted-vec = "0.8.0"

# Text
wgpu_glyph = { git = "https://github.com/sconybeare/wgpu_glyph.git", rev="68e0abe" }
glyph_brush = "0.7"

[dependencies.gltf]
version = "1.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
