[package]
name = "te-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { workspace = true }
cgmath = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true, features = ["rwh_05"] }
bytemuck = { workspace = true }
sorted-vec = { workspace = true }

# Text
wgpu_glyph = { workspace = true }
glyph_brush = { workspace = true }
gltf = { workspace = true }
image = { workspace = true }
